reset models a bit for md5, colors

--- a/md5/style.css
+++ b/md5/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #000000; /* Dark background */
-    color: #4f4f4f; /* Light text */
+    color: #686868; /* Light text */
     font-family: Arial, sans-serif;
     font-size: 12pt;;
     justify-content: center;
