--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body a:hover {
     max-width: 100%;
     margin: auto;
     padding: 30px 0;
+    text-decoration: none;
 }
 
 .row {
@@ -71,6 +72,22 @@ body a:hover {
     padding: 10px;
 }
 
+.clickable-div-no-image {
+    width: 34vh;
+    height: 10vh;
+    font-size: 4vh;
+    background-color: #383838;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: inherit;
+    border: 2px solid #4f4f4f;
+    padding: 10px;
+}
+
 .clickable-div img {
     width: 20vh;
     height: auto;
@@ -79,6 +96,12 @@ body a:hover {
 
 .clickable-div:hover {
     background-color: #474747;
+    text-decoration: none;
+}
+
+.clickable-div-no-image:hover {
+    background-color: #474747;
+    text-decoration: none;
 }
 
 /* Footer styles */
@@ -120,4 +143,44 @@ footer {
         text-align: center;
         margin-top: 20px;
     }
+}
+
+
+/* Back arrow styles */
+.back-arrow {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    color: #8f8f8f;
+    font-size: 24px;
+    text-decoration: none;
+}
+
+.back-arrow:hover {
+    color: #bababa;
+}
+
+.back-arrow i {
+    margin-right: 8px;
+}
+
+
+@font-face {
+    font-family: 'q1';
+    src: url('namemaker/Quake1.ttf') format('truetype');
+}
+
+#quakefontheader
+{
+    font-family: 'q1', sans-serif;
+    text-shadow: 0.2vw 0.26vw 0.13vw rgba(0, 0, 0, 0.3), -1px 1px 0px #955544;
+    opacity: .9;
+    letter-spacing: 1px;
+    word-spacing: -10px;
+    color: #8f5748;
+}
+
+#quakefontheader a {
+    color: #955544; /* Ensure links within #quakefontheader use the same color */
+    text-decoration: none; /* Remove text decoration from links */
 }
