--- a/pak/style.css
+++ b/pak/style.css
@@ -95,6 +95,23 @@ img.preview {
     background: #FFF;
 }
 
+.md3-preview-container {
+    width: 240px;
+    height: 240px;
+    margin-top: 10px;
+    border: 1px solid #2a2a2a;
+    border-radius: 4px;
+    background: #101010;
+    overflow: hidden;
+    position: relative;
+}
+
+.md3-preview-container canvas {
+    width: 100% !important;
+    height: 100% !important;
+    display: block;
+}
+
 .audio-control {
     display: none;
 }
